# taskflow

task-manager-api/: .env.example  .gitignore  Dockerfile  README.md  drop_tables.py  pyproject.toml  test_login.py
task-manager-api/.github/workflows/: test.yml
task-manager-api/alembic/: env.py
task-manager-api/alembic/versions/: 1d3f1df99201_add_tag_table.py  2d33775096ce_initial_migration.py  31a3e2c89ac3_add_category_and_update_priority.py  351ec0c3126f_add_priority_column.py  474f7a09fbe0_add_category_table.py  8cdf10de16b1_add_subtask_table.py  a765d96d3bcd_add_remind_at_to_tasks.py  b562c62ee749_add_projects_dependencies_timers.py  dbf9837e6bbc_add_taskstatus_enum.py  f5b37e579d18_add_priority_and_due_date.py
task-manager-api/app/: main.py
task-manager-api/app/api/: deps.py
task-manager-api/app/api/v1/: auth.py  categories.py  projects.py  router.py  subtasks.py  tags.py  tasks.py
task-manager-api/app/core/: config.py  exceptions.py  logger.py  security.py
task-manager-api/app/db/: session.py
task-manager-api/app/models/: __init__.py  category.py  project.py  subtask.py  tag.py  task.py  time_entry.py  user.py
task-manager-api/app/schemas/: category.py  project.py  subtask.py  tag.py  task.py  token.py  user.py
task-manager-api/app/services/: auth_service.py  category_service.py  subtask_service.py  tag_service.py  task_service.py
task-manager-api/tests/: conftest.py  test_auth.py  test_tasks.py
task-manager-frontend/: app.js  auth.js  dashboard.html  dashboard.js  index.html  style.css
